# Hackathon2-Phase-3

./: .gitignore  QWEN.md  database_schema_design_specification.md  requirements.txt
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  init.sql  nginx.conf  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_tables.py
backend/src/: database_py.py  main.py  models_py.py  session.py
backend/src/api/: __init__.py  auth.py  base_router.py  chat_api.py  chat_router.py  deps.py  health.py  tasks.py  tasks.py.backup  users.py
backend/src/config/: openai_config.py  prompts.py  settings.py
backend/src/core/: config.py  database.py  input_sanitization.py  logging.py  performance_monitor.py  security.py
backend/src/database/: connection.py  crud.py  crud_optimized.py  init.py  session.py
backend/src/db/: init_tables.py
backend/src/mcp/: server.py  tools.py
backend/src/middleware/: logging_middleware.py  rate_limit.py
backend/src/models/: __init__.py  base.py  chat.py  conversation.py  message.py  task.py  user.py
backend/src/services/: __init__.py  agent_runner.py  conversation_service.py  error_handling_wrapper.py  error_responses.py  mcp_integration.py  message_service.py  response_formatter.py  task_service.py  tool_registry.py  user_service.py
backend/tests/: test_config.py  test_database.py  test_neon_connection.py
backend/tests/contract/: test_chat_api.py  test_mcp_tools.py  test_security.py
backend/tests/integration/: test_add_task.py  test_agent_context_passing.py  (+12 more)
(+126 files in other folders)
