[project]
name = "backend"
version = "0.1.0"
description = "Backend for the multi-user task management application"
authors = [
    {name = "Developer", email = "developer@example.com"}
]
requires-python = ">=3.11,<4.0"

dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "sqlmodel==0.0.16",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "passlib[bcrypt]==1.7.4",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.6",
    "alembic==1.13.1",
    "asyncpg==0.29.0",
    "openai>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    "black==23.10.1",
    "flake8==6.1.0",
    "mypy==1.7.1",
    "isort==5.12.0"
]